--- a/6502.md
+++ b/6502.md
@@ -5,14 +5,24 @@ Ramblings about 6502 code optimization and tricks used and figured out when deve
 
 ## Functions
 
-* Since there are only 3 registers, functions can be most easily reused if they only use 1 or at most 2 registers as input parameters:
+* Since there are only 3 registers, functions can be most easily reused if they only use 1 or at most 2 registers as input parameters. This will keep the call-sites reasonably sized and might avoid spilling loop registers into ZP variables.
 
     * `A` is most appropriate for a value, since `A` is almost always clobbered anyway.
 
     * `X` or `Y` are most appropriate for when indexing into a table.
 
 
+## Performance
+
+* Make sure indexed access does not cross a page boundary as accessing the second page costs 1
+cycle extra. The easiest way to do this is to put the indexed array completely in a single page.
+
+* Using a (fixed) ZP variable in a loop, e.g. `lda $A0` (3 cycles), is 1 cycle slower per loop than self-modifying a `lda #$FF` (2 cycles) that is used in the loop. The ZP variable is more maintainable though, especially if it is used multiple times.
+
+
 ## Size optimization tricks
+
+* Make use of ZP variables, because ZP addresses only take up 1 byte instead of 2. This will make the code denser so less packable.
 
 * When a function would end with `jsr` + `rts`, replace it with `jmp` instead, saving 1 byte, avoiding stack usage and avoiding 6 cycles for `rts`.
 
@@ -24,5 +34,7 @@ Ramblings about 6502 code optimization and tricks used and figured out when deve
 
 * When branching to an `rts` to end a function, branch to an existing `rts`, possibly saving 1 byte.
 
-* Saving/restoring `A` is easily done with `pha` (3 cycles) / `pla` (4 cycles), costing only 2 bytes, just slow to do in a loop.
-`STA $FF` (3 cycles) / `LDA $FF` (3 cycles) is an alternative but that uses a byte in ZP.
+* Saving/restoring `A` can be done with `pha` (3 cycles) / `pla` (4 cycles), costing only 2 bytes
+    * Alternatively, `sta $FF` (3 cycles) / `lda $FF` (3 cycles) avoids the stack but uses a ZP byte and takes 4 bytes.
+    * Reloading `A` with `lda $FF` (3 cycles) takes 2 bytes
+    * Reloading `A` with `lda $FFFF` or `lda $FFFF,x` (both 4 cycles) takes 3 bytes
