--- a/C64.md
+++ b/C64.md
@@ -1,3 +1,19 @@
 # C64
 
-### TODO HOWTO install VICE on Chromebook
+### HOWTO install VICE on Chromebook
+
+1. Add `contrib` archive to your debian environment by editing `/etc/apt/sources.list`:
+
+        deb https://deb.debian.org/debian buster main contrib
+    
+1. Run `sudo apt update` to download the list of `contrib` packages
+
+1. Run `sudo apt install vice` to install `vice`
+
+1. Download `basic`, `chargen`, `kernal` from https://sourceforge.net/p/vice-emu/code/HEAD/tree/trunk/vice/data/C64/
+
+1. Run `sudo mv basic chargen kernal /usr/lib/vice/C64` to put them in `/usr/lib/vice/C64`.
+
+Now you should be able to run `x64sc`. 
+
+1. Use `x64sc -autostartprgmode 0 <prg>` to use VirtualFS or change the settings via the GUI and save them as default.
