--- a/6502.md
+++ b/6502.md
@@ -5,11 +5,21 @@ Ramblings about 6502 code optimization and tricks used and figured out when deve
 
 ## Functions
 
-* Since there are only 3 registers, functions can be most easily reused if they only use 1 or at most 2 registers as input parameters. This will keep the call-sites reasonably sized and might avoid spilling loop registers into ZP variables.
+* Since there are only 3 registers, functions can be most easily reused if they only use 1 or at most 2 registers as input parameters. This will keep the call-sites reasonably sized and might avoid spilling loop registers into ZP variables. Calling a function with 3 parameters takes at least 4 instructions and 9 bytes.
 
     * `A` is most appropriate for a value, since `A` is almost always clobbered anyway.
 
     * `X` or `Y` are most appropriate for when indexing into a table.
+
+
+## Struct of Arrays vs Array of Structs
+
+For smaller arrays <256 bytes you can use Array of Structs like you would in C. Note however,
+that indices will not be continuous but jump per sizeof(Struct) and this may complicate things a bit.
+
+For larger arrays that span more than one page >256 bytes changing to a Struct of Arrays
+(i.e. separating each field of the structure in its own array) will simplify things as each field is
+directly accessible via continuous indices.
 
 
 ## Performance
@@ -17,14 +27,21 @@ Ramblings about 6502 code optimization and tricks used and figured out when deve
 * Make sure indexed access does not cross a page boundary as accessing the second page costs 1
 cycle extra. The easiest way to do this is to put the indexed array completely in a single page.
 
-* Using a (fixed) ZP variable in a loop, e.g. `lda $A0` (3 cycles), is 1 cycle slower per loop than self-modifying a `lda #$FF` (2 cycles) that is used in the loop. The ZP variable is more maintainable though, especially if it is used multiple times.
+* Using a (fixed) ZP variable in a loop, e.g. `lda $A0` (3 cycles), is 1 cycle slower per loop than self-modifying a `lda #$FF` (2 cycles) that is used in the loop.
+The ZP variable is more maintainable though, especially if it needed more than once in the loop.
+
+* Using `jsr` (6 cycles) and subsequent `rts` (6 cycles) really adds up in a loop. If the `jsr` is
+used (self modified) to call a user function, a trick is to replace it with a `jmp` (3 cycles).
+The user function then needs to `jmp` back to the caller. This saves 6 cycles per loop.
+
+* Inlining (short) functions avoids the `jsr` + `rts` (12 cycles) penalty altogether.
 
 
 ## Size optimization tricks
 
 * Make use of ZP variables, because ZP addresses only take up 1 byte instead of 2. This will make the code denser so less packable.
 
-* When a function would end with `jsr` + `rts`, replace it with `jmp` instead, saving 1 byte, avoiding stack usage and avoiding 6 cycles for `rts`.
+* When a function ends with a `jsr` followed by `rts`, replace it with `jmp` instead, saving 1 byte, avoiding stack usage and 9 cycles faster, from 12 down to 3!
 
 * Put functions in front of other functions to fall through instead of `jmp` saving 3 bytes.
 
@@ -32,9 +49,19 @@ cycle extra. The easiest way to do this is to put the indexed array completely i
 
 * Use branches (e.g. `beq`) on known conditions ("always") instead of `jmp`, saving 1 byte. The speed is the same, unless the branch is to another page (different high byte).
 
+* Use `$2C` (`bit $FFFF`) to skip the next (2 byte) instruction instead of a "branch always *+2". This saves 1 byte.
+
 * When branching to an `rts` to end a function, branch to an existing `rts`, possibly saving 1 byte.
 
 * Saving/restoring `A` can be done with `pha` (3 cycles) / `pla` (4 cycles), costing only 2 bytes
     * Alternatively, `sta $FF` (3 cycles) / `lda $FF` (3 cycles) avoids the stack but uses a ZP byte and takes 4 bytes.
     * Reloading `A` with `lda $FF` (3 cycles) takes 2 bytes
     * Reloading `A` with `lda $FFFF` or `lda $FFFF,x` (both 4 cycles) takes 3 bytes
+
+
+
+## Compression and packing
+
+* Repeated code sequences compress better.
+
+* Denser code is less compressible, so optimizing for size may not always the best choice.
