Add Sprite X position MSB ramblings

--- a/6502.md
+++ b/6502.md
@@ -65,3 +65,57 @@ The user function then needs to `jmp` back to the caller. This saves 6 cycles pe
 * Repeated code sequences compress better.
 
 * Denser code is less compressible, so optimizing for size may not always the best choice.
+
+
+
+## Sprite X position MSB
+
+As you probably know, sprites have an Y and an X position. The X position is special,
+because it is actually 9 bits. This makes it somewhat awkward to work with.
+
+One trick is to use 16 bits instead, giving an extra 7 bits of precision.
+This is a bit over the top but it gives a nice and smooth movement when running 50Hz or 60Hz.
+
+```
+SpriteX:            !word 200<<7
+SpriteY:            !word 160<<8
+
+            lda SpriteX
+            rol
+            lda SpriteX+1
+            rol                         ; MSB in C
+            sta $D000
+            ; convert C to correct MSB bit
+            lda #0
+            bcc +
+            lda #1
++           sta $D010
+            lda SpriteY+1
+            sta $D001
+```
+
+Another version that allows for adding an 8-bit signed byte to X and Y.
+Signed bytes need sign extension to 9.7 bits so add even more awkwardness.
+
+```
+            ldx SpriteFrameIndex
+            lda SpriteX
+            rol
+            lda SpriteX+1
+            rol
+            php ;3                      ; store C (MSB)
+            clc
+            adc SPRITE_FRAME_DX,x       ; X offset
+            sta $D000
+            pla ;4                      ; restore C (MSB) in A bit0
+            adc #0                      ; add possible carry from 'adc'
+            ldy SPRITE_FRAME_DX,x       ; 3 instructions = 7 bytes = 4*+3*+2 = 9* cycles to handle sign extension
+            bpl +                       ; "
+            eor #1                      ; " correct MSB by sign extension (only bit0 of A is valid)
++           and #1                      ; bit in sprite register (note only works this way for sprite0!)
+            sta VIC_SPR_X_MSB
+            lda SpriteY+1
+            clc
+            adc SPRITE_FRAME_DY,x       ; Y offset
+            sta $D001
+```
